# MCIS

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists_old.txt  MCIS_MB_interface.cpp  MCIS_MB_interface.h  MCIS_MDA.cpp  MCIS_MDA.h  MCIS_config.cpp  MCIS_config.h  MCIS_fileio.cpp  MCIS_fileio.h  MCIS_util.h  MCIS_xplane_sock.cpp  MCIS_xplane_sock.h  MCISinit.cfg  MCISinit_backup.cfg  MCISinput.csv  MCIStest  MCIStest.cpp  MOOG6DOF2000E.h  dependencies.txt  discreteMath.cpp  discreteMath.h  fstest  fstest.cpp  license.txt  limitstest  limitstest.cpp  makefile  makefile.mak  mbtest  mbtest.cpp  mbtest_old.cpp  nettest.cpp  readme.txt  runalltestfiles.sh
src/: MCIS-offline.cpp  MCIS.cpp  MCIS_MB_interface.cpp  MCIS_MDA.cpp  MCIS_config.cpp  MCIS_fileio.cpp  MCIS_util.cpp  MCIS_xplane_sock.cpp  MCIStest.cpp  crc.c  discreteMath.cpp  limitstest.cpp  mbtest.cpp  nettest.cpp  timetest.cpp
src/include/: MCIS_MB_interface.h  MCIS_MDA.h  MCIS_TUI.h  MCIS_config.h  MCIS_fileio.h  MCIS_util.h  MCIS_xplane_sock.h  MOOG6DOF2000E.h  crc.h  discreteMath.h
testinputs/: Readme.txt  test1.csv  test10.csv  test10out.csv  test1out.csv  test2.csv  test2out.csv  test3out.csv  test4.csv  test4out.csv  test5.csv  test5out.csv  test6.csv  test6out.csv  test7.csv  test7out.csv  test8.csv  test8out.csv  test9.csv  test9out.csv
testoutputs/: Readme.txt
